# Orkestra

./: .gitignore  222_AI_COLLABORATION_CONVERSATION copy.txt  333_AI_COLLABORATION_RULES.md  AI_ALIGNMENT_SUMMARY.md  AI_AUTOMATION_SYSTEM.md  AI_BUSINESS_ASSESSMENT.md  AI_COLLABORATION_CONVERSATION.txt  AI_COORDINATION_SYSTEM_EFFECTIVENESS_REPORT.md  AI_DRIVEN_PLANNING.md  AI_EXTENSION_ASSESSMENT.md  AI_SYSTEM_FIX_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  CHANGELOG.md  CONTEXT_DEMOCRACY_COMPLETE.md  CONTRIBUTING.md  DEMO_VOTE_PROCESS.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_COMPLETE.md  MACOS_SETUP.md  MANIFEST.in  PACKAGE_SUMMARY.md  PROJECT_ARCHITECTURE.md  PROJECT_PLANNING_IMPLEMENTATION.md  PUBLISHING.md  PYTHON_INTEGRATION_COMPLETE.md  QUICKSTART.md  README_PYPI.md  SCRIPT_INTEGRATION_SUMMARY.md  START_HERE.md  STATUS_UPDATES.txt  VISUAL_SUMMARY.txt  activate-orkestra.sh  ai_coordinator.sh  dd  orkestra-menu.sh  orkestra-status.md  orkestra.sh  orkestra_cli.py  (+5 more)
ARCHIVE/old-extensions/: README.md
BACKUPS/: task-queue-20251019.json
BACKUPS/orkestra_backup_20251018_145916/: COPILOT_STATUS.md  GEMINI_STATUS.md
BACKUPS/untitled-folder-backup/: 222_AI_COLLABORATION_CONVERSATION.txt  (+48 more)
COMMITTEE/: COMMITTEE-MEETING-PROTOCOL.md  FILE-STRUCTURE.md  SYSTEM-COMPLETE.md
COMPRESSION/: CHAIR_MEETING_MINUTES.md  MEETING_MINUTES.md
CONFIG/: api-keys.env  current-project.json
DOCS/: QUICK-START.md
PROJECTS/: projects-index.json
orkestration /: MASTER_PRODUCT_ECOSYSTEM.md  MESSAGE_TO_AIS.md  MULTI_AI_CLI_INTEGRATION_PLAN.md  ORCHESTRATION_SESSION_REPORT.md  ORCHESTRATOR_IMPROVEMENT_OPPORTUNITIES.md  ORKESTRA_LAUNCH_GUIDE.md  ORKESTRA_MIGRATION_COMPLETE.md  ORKESTRA_MIGRATION_SUCCESS.md  ORKESTRA_STATUS.md  PROJECT_HANDOFF_FILE.md  QUICK_START_AUTOPILOT.md  README.md  README_OLD.md  REPOSITORY_MIGRATION_PLAN.md  SAAS_ROADMAP.md  SAFETY_PEER_REVIEW_IMPACT_ANALYSIS.md  SAFETY_SYSTEM_SUMMARY.md  SMART_ASSIGNMENT_SYSTEM.md  STORY_CONTEXT.md  STRATEGY_SESSION_OCT_18_2025.md  SYSTEM_RULES.md  SYSTEM_STATUS.md  TASK_QUEUE.json  TASK_QUEUE.json.backup.20251018_051412  TASK_QUEUE_ALGORITHM_COMPETITION.json  TASK_QUEUE_BACKUP_20251018_132455.json  TASK_QUEUE_BACKUP_20251018_145734.json  TASK_QUEUE_test_backup.json  TEST_CHATGPT.txt  TODD_ACTION_PLAN.md  migrate_orkestra_with_hacs.sh  migrate_to_orkestra_repo.sh  monitor.sh  monitor_competition.sh  orchestrator.sh  orkestra_autopilot.sh  orkestra_start.sh  push_orkestra_to_github.sh  resilience_system.sh  smart_task_selector.sh  (+5 more)
tests/: conftest.py  test_cli.py  test_config.py  test_core.py
(+237 files in other folders)
